# buscacursos-dl

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scheduler.py  stderr.txt
.github/workflows/: docker.yml
bc_scraper/actions/: collect.py  collect_catalogo.py
bc_scraper/scraper/: request.py  search.py
bc_scraper/storage/: semester_store.py
scripts/: export-db.py  make-universal.py
