[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buscacursos-dl"
version = "0.1.0"
description = "A tool to download and manage course information from BuscaCursos"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "kovaxis", email = "user@example.com"},
    {name = "jj-sm", email = "gh@jjsm.science"}
]
keywords = ["courses", "download", "buscacursos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "pylint>=2.15",
    "mypy>=0.990",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bc_scraper*"]

[project.urls]
Homepage = "https://github.com/jj-sm/buscacursos-dl"
